Update question and answer formatting in HTML
Refactor questions and answers for clarity and consistency.

--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -294,7 +294,7 @@
             <!-- Q5 -->
             <li id="q5">
               <div class="enunciado">
-                <strong>5) Com o auxílio da figura dada, determine o valor aproximado da energia perdida (depositada) por um feixe de partículas alfa de 1 MeV após atravessar uma espessura de 5 µm num bloco de ouro.</strong>
+                <strong>Com o auxílio da figura dada, determine o valor aproximado da energia perdida (depositada) por um feixe de partículas alfa de 1 MeV após atravessar uma espessura de 5 µm num bloco de ouro.</strong>
                 <p>Obs.:</p>
                 <ul class="muted" style="margin:6px 0;">
                   <li>O eixo vertical da figura é a variação de energia dividida pela densidade do meio: \( -\dfrac{\mathrm{d}E}{\mathrm{d}x}\big/\rho \). Considere \( \rho_{\text{Au}} = 19{,}32\,\text{g/cm}^3 \).</li>
@@ -318,7 +318,7 @@
             <!-- Q6 -->
             <li id="q6">
               <div class="enunciado">
-                <strong>6) Range de elétrons em Al (Bragg - Kleeman).</strong>
+                <strong>Range de elétrons em Al (Bragg - Kleeman).</strong>
                 <p>Com o auxílio da figura dada e empregando a lei de Bragg-Kleeman (ou scaling law), estime a espessura de absorção total da energia cinética (espessura que irá parar uma partícula ou range) para um feixe de elétrons a 1 MeV em alumínio.</p>
                 <div class="eq">
                   \( \rho_{\text{Al}}=2{,}699\,\text{g/cm}^3 \), \( A_{\text{Al}}=26{,}98 \), \( A_{\text{Si}}=28{,}09 \) <br />
@@ -458,14 +458,27 @@
 
   <div class="resposta">
     <strong>Resposta 13.</strong>
-    <p>Os espectros A e B representam a emissão de radiação de corpo negro para dois corpos diferentes. O pico de emissão de cada curva ocorre em um comprimento de onda diferente (<em>λ<sub>máx</sub></em>), indicando temperaturas distintas. O corpo cujo pico está deslocado para comprimentos de onda menores (mais próximo do azul/violeta) é o mais quente, enquanto aquele cujo pico está em comprimentos de onda maiores (mais próximo do vermelho/infravermelho) possui menor temperatura.</p>
-    <p>Para determinar a temperatura absoluta de cada corpo, deve-se ler o valor aproximado de <em>λ<sub>máx</sub></em> em cada gráfico e aplicar a Lei de Wien:</p>
+    <p>Os espectros A e B representam a emissão de radiação de corpo negro para dois corpos distintos. O pico de emissão (<em>λ<sub>máx</sub></em>) indica a temperatura de cada corpo: quanto menor o comprimento de onda do pico, maior a temperatura.</p>
 
+    <p>Visualmente, observa-se que:</p>
+    <ul>
+      <li><strong>Corpo A</strong> → pico em torno de <strong>2700 Å</strong> (270 nm, região ultravioleta);</li>
+      <li><strong>Corpo B</strong> → pico em torno de <strong>4800 Å</strong> (480 nm, região azul-esverdeada).</li>
+    </ul>
+
+    <p>A partir da Lei de Wien:</p>
     <p style="text-align:center;">\( \lambda_{\max} \cdot T = 2{,}898 \times 10^{-3}\ \text{m·K} \)</p>
 
-    <p>Assim, \( T = \dfrac{2{,}898 \times 10^{-3}}{\lambda_{\max}} \) em Kelvin, e a conversão para graus Celsius é dada por \( T(°C) = T(K) - 273 \).</p>
+    <p>Calculando:</p>
+    <ul>
+      <li><strong>Corpo A:</strong> \( T = \dfrac{2{,}898\times10^{-3}}{2{,}7\times10^{-7}} = 1{,}07\times10^{4}\,\text{K} \Rightarrow 10\,700 - 273 \approx \mathbf{10\,427\,°C} \)</li>
+      <li><strong>Corpo B:</strong> \( T = \dfrac{2{,}898\times10^{-3}}{4{,}8\times10^{-7}} = 6{,}04\times10^{3}\,\text{K} \Rightarrow 6\,040 - 273 \approx \mathbf{5\,767\,°C} \)</li>
+    </ul>
+
+    <p>Portanto, o <strong>Corpo A</strong> é significativamente mais quente, com temperatura aproximada de <strong>10 400 °C</strong>, enquanto o <strong>Corpo B</strong> possui cerca de <strong>5 800 °C</strong>.</p>
   </div>
 </li>
+
 
 
             <!-- Q14 -->
