Replace response list with a structured table
Substituted the list of responses with a table format for better clarity and organization.

--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -231,19 +231,30 @@
               </div>
 
 <div class="resposta">
-  <strong>Resposta 1. (Knoll, 2ª Ed.)</strong>
+  <strong>Resposta 1. (Resumo em tabela)</strong>
 
-  <ol type="a">
-    <li><strong>Partículas alfa:</strong> Linhas <strong>discretas</strong>. Emissão monoenergética de núcleos com níveis bem definidos.</li>
-    <li><strong>Partículas beta:</strong> <strong>Contínuo</strong>. A energia de decaimento é compartilhada entre o elétron beta e o antineutrino.</li>
-    <li><strong>Raios gama:</strong> Linhas <strong>discretas</strong>. Fótons emitidos por transições nucleares específicas.</li>
-    <li><strong>Raios-X característicos:</strong> Linhas <strong>discretas</strong>. Originam-se de diferenças de energia discretas entre camadas atômicas.</li>
-    <li><strong>Elétrons de conversão interna:</strong> Linhas <strong>discretas</strong>. Energia cinética dada aproximadamente por \( T_{i} = Q - B_{i} \).</li>
-    <li><strong>Elétrons Auger:</strong> Linhas <strong>discretas</strong>. Produzem um espectro de energia discreto, inerente às transições atômicas.</li>
-    <li><strong>Fissão espontânea (fragmentos):</strong> <strong>Contínuo</strong>. O espectro de energia cinética dos fragmentos é largo.</li>
-    <li><strong>Bremsstrahlung:</strong> <strong>Contínuo</strong>. Resulta da desaceleração contínua de elétrons/partículas beta no campo Coulombiano.</li>
-    <li><strong>Radiação de aniquilação:</strong> Linhas <strong>discretas</strong>. Resulta em dois fótons com energia fixa de \( 0.511\,\text{MeV} \).</li>
-  </ol>
+  <table border="1" cellpadding="6" cellspacing="0" style="border-collapse:collapse; width:100%; text-align:left;">
+    <thead>
+      <tr>
+        <th>Fonte de radiação</th>
+        <th>Espectro</th>
+        <th>Justificativa breve</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>Partículas alfa</td><td>Discreto</td><td>Emissão monoenergética</td></tr>
+      <tr><td>Partículas beta</td><td>Contínuo</td><td>Energia dividida com antineutrino</td></tr>
+      <tr><td>Raios gama</td><td>Discreto</td><td>Transições nucleares específicas</td></tr>
+      <tr><td>Raios-X característicos</td><td>Discreto</td><td>Transições entre camadas eletrônicas</td></tr>
+      <tr><td>Elétrons de conversão interna</td><td>Discreto</td><td>Ejetados com energia definida (Q − B)</td></tr>
+      <tr><td>Elétrons Auger</td><td>Discreto</td><td>Rearranjo eletrônico</td></tr>
+      <tr><td>Fissão espontânea</td><td>Contínuo</td><td>Fragmentos com ampla faixa de energias</td></tr>
+      <tr><td>Bremsstrahlung</td><td>Contínuo</td><td>Desaceleração contínua em campo elétrico</td></tr>
+      <tr><td>Radiação de aniquilação</td><td>Discreto</td><td>Dois fótons de 0,511 MeV</td></tr>
+    </tbody>
+  </table>
+</div>
+
 </div>
 
 
