--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -365,7 +365,7 @@
                 <figure>
                   <img
                     class="fig-fixed"
-                    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-6.png?raw=1"
+                    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-6.png"
                     alt="Figura do exercício 6"
                   />
                   <figcaption>Figura - Elétrons em Al.</figcaption>
@@ -373,18 +373,23 @@
               </div>
 <div class="resposta">
   <strong>Resposta 6.</strong>
-  <p><em>Leitura do gráfico (Fig. 2.14):</em> para elétrons de \(1\,\text{MeV}\), o ponto em silício (marca “X”) indica \(R\!\times\!\rho \approx 0{,}45\ \text{g·cm}^{-2}\) (faixa visual \(0{,}40\text{–}0{,}50\)).</p>
+  <p><em>Ideia:</em> A Fig. 2.14 traz o alcance em <em>espessura de massa</em> \(R\rho\) (g·cm\(^{-2}\)). Para obter o alcance físico em um material basta dividir por sua densidade.</p>
 
-  <p>1) Alcance em Si: \( R_{\text{Si}} = \dfrac{(R\rho)_{\text{Si}}}{\rho_{\text{Si}}} \approx \dfrac{0{,}45}{2{,}33}\ \text{cm} \approx 0{,}193\ \text{cm} \) \((\rho_{\text{Si}}=2{,}33\ \text{g·cm}^{-3})\).</p>
+  <ol>
+    <li><strong>Leitura do gráfico.</strong> Em \(1\,\text{MeV}\), lê-se \(R\rho \approx 0{,}50\ \text{g·cm}^{-2}\) (faixa 0,45–0,55).</li>
+    <li><strong>Densidade do alumínio.</strong> \( \rho_{\mathrm{Al}} = 2{,}699\ \text{g·cm}^{-3} \).</li>
+    <li><strong>Alcance físico em Al.</strong> 
+      \( R_{\mathrm{Al}} = \dfrac{R\rho}{\rho_{\mathrm{Al}}}
+      = \dfrac{0{,}50}{2{,}699}\ \text{cm}
+      \approx 0{,}185\ \text{cm} = 1{,}85\ \text{mm}. \)
+    </li>
+  </ol>
 
-  <p>2) Escalonamento (Bragg–Kleeman) para Al:<br>
-  \( \displaystyle \frac{R_{\text{Al}}}{R_{\text{Si}}}=\frac{\rho_{\text{Si}}}{\rho_{\text{Al}}}\cdot\frac{A_{\text{Al}}}{A_{\text{Si}}} \Rightarrow
-  R_{\text{Al}} = R_{\text{Si}} \left(\frac{2{,}33}{2{,}699}\right)\!\left(\frac{26{,}98}{28{,}09}\right) \approx 0{,}193\times 0{,}828 \approx 0{,}160\ \text{cm}. \)</p>
+  <p><strong>Resposta:</strong> \( R_{\mathrm{Al}} \approx \mathbf{0{,}19\ \text{cm}} \) (≈ \(\mathbf{1{,}9\ \text{mm}}\)).</p>
 
-  <p><strong>Espessura que pára o feixe em Al:</strong> \( R_{\text{Al}} \approx \mathbf{1{,}6\ \text{mm}} \).</p>
-
-  <p class="muted">Incerteza pela leitura do gráfico: se \((R\rho)_{\text{Si}}\in[0{,}40,\,0{,}50]\ \text{g·cm}^{-2}\), então \(R_{\text{Al}}\approx 1{,}4\text{–}1{,}9\ \text{mm}\). Observação: a lei de Bragg–Kleeman é mais adequada a partículas pesadas; aqui foi usada apenas como aproximação solicitada.</p>
+  <p class="muted">Observações: (i) A lei de Bragg–Kleeman não é necessária aqui, pois o gráfico já está em \(R\rho\), praticamente universal para elétrons em diferentes materiais; (ii) com \(R\rho\in[0{,}45,\,0{,}55]\), obtém-se \(R_{\mathrm{Al}}\in[0{,}167,\,0{,}204]\ \text{cm}\) (≈ 1,7–2,0 mm).</p>
 </div>
+
 
             </li>
 
