Update image source to use raw GitHub link

--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -365,7 +365,7 @@
                 <figure>
                   <img
                     class="fig-fixed"
-                    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-6.png"
+                    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-6.png?raw=1"
                     alt="Figura do exercício 6"
                   />
                   <figcaption>Figura - Elétrons em Al.</figcaption>
@@ -386,8 +386,6 @@
   </ol>
 
   <p><strong>Resposta:</strong> \( R_{\mathrm{Al}} \approx \mathbf{0{,}19\ \text{cm}} \) (≈ \(\mathbf{1{,}9\ \text{mm}}\)).</p>
-
-  <p class="muted">Observações: (i) A lei de Bragg–Kleeman não é necessária aqui, pois o gráfico já está em \(R\rho\), praticamente universal para elétrons em diferentes materiais; (ii) com \(R\rho\in[0{,}45,\,0{,}55]\), obtém-se \(R_{\mathrm{Al}}\in[0{,}167,\,0{,}204]\ \text{cm}\) (≈ 1,7–2,0 mm).</p>
 </div>
 
 
