Revise answer for energy of protons in silicon
Updated the explanation and calculation steps for the energy of protons after passing through silicon.

--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -298,16 +298,37 @@
                 </figure>
               </div>
               <div class="resposta">
-  <strong>Resposta 4.</strong>
-  <p><em>Leitura do gráfico (Fig. 2.7, prótons em Si):</em> para \(5\,\text{MeV}\), o alcance total é \(R_{5\,\text{MeV}}\approx 2{,}5\times10^{2}\,\mu\text{m}\) (≈ 250 µm). Ao atravessar \(t=100\,\mu\text{m}\), resta um alcance \(R_{\text{rest}}\approx 150\,\mu\text{m}\).</p>
-  <p>Adotando a relação empírica \(R = aE^{b}\) (com \(b\simeq 1{,}7\) para prótons), a energia associada ao alcance remanescente é:</p>
-  <p style="text-align:center;">
-    \( E_{\text{rest}} = 5\,\text{MeV}\,\left(\dfrac{R_{\text{rest}}}{R_{5\,\text{MeV}}}\right)^{1/b}
-    \approx 5\,\left(\dfrac{150}{250}\right)^{1/1.7}
-    \approx \mathbf{3{,}7\ \text{MeV}}. \)
-  </p>
-  <p class="muted">Obs.: A leitura do gráfico é aproximada; tomando \(R_{5\,\text{MeV}}\in[230,300]\,\mu\text{m}\) e \(b\in[1{,}6,1{,}75]\), obtém-se \(E_{\text{rest}}\approx 3{,}6\text{–}4{,}0\,\text{MeV}\).</p>
-</div>
+  <div class="resposta">
+    <strong>Resposta 4.</strong>
+    <p>O problema pede a energia restante de um feixe de prótons de 5 MeV após atravessar 100 µm de silício (Si). O gráfico fornece a relação entre a <em>range</em> (profundidade total, em µm) e a energia de prótons em Si. Sabendo que a partícula perde energia progressivamente até parar, podemos estimar a energia residual com base na fração de material atravessado.</p>
+
+    <h4>Passo 1 – Determinar o alcance total de um próton de 5 MeV em Si</h4>
+    <ul>
+      <li>Localize 5 MeV no eixo x (energia de partícula).</li>
+      <li>Siga a linha vertical até interceptar a curva “Protons”.</li>
+      <li>A partir do ponto de interseção, trace horizontalmente até o eixo y (alcance em µm).</li>
+      <li>O alcance total é aproximadamente <strong>300 µm</strong> para prótons de 5 MeV.</li>
+    </ul>
+
+    <h4>Passo 2 – Calcular a fração do alcance percorrido</h4>
+    <ul>
+      <li>O próton atravessa 100 µm de Si.</li>
+      <li>Fração percorrida: \( \dfrac{100}{300} = \dfrac{1}{3} \).</li>
+    </ul>
+
+    <h4>Passo 3 – Estimar a energia restante após 100 µm</h4>
+    <p>No gráfico log–log, a relação entre alcance e energia é aproximadamente da forma \( R = aE^b \).</p>
+    <ul>
+      <li>Se o próton percorreu 1/3 do seu alcance total, ainda resta energia correspondente a um alcance de \( R_{\text{rest}} = 300 - 100 = 200\,\mu\text{m} \).</li>
+      <li>No gráfico, localize \( 200\,\mu\text{m} \) no eixo y e mova até a curva “Protons”, depois desça até o eixo x.</li>
+      <li>A energia correspondente é cerca de <strong>3,5 MeV</strong>.</li>
+    </ul>
+
+    <h4>Passo 4 – Concluir a energia remanescente</h4>
+    <p>Após atravessar 100 µm de Si, a energia restante do feixe de prótons é aproximadamente <strong>3,5 MeV</strong>.</p>
+
+    <p class="muted"><em>Resposta final:</em> A energia remanescente de um feixe de prótons de 5 MeV após passar por 100 µm de silício é aproximadamente <strong>3,5 MeV</strong>.</p>
+  </div>
 
             </li>
 
